# basic-opengl-demo

./: .gitignore  .gitmodules  CMakeLists.txt  run.sh
ext/glfw/tests/: allocator
res/shaders/: Basic.shader  ShaderUtils.hpp
scripts/: build.sh  configure.sh
src/: main.cpp
